--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,10 @@
-Scrapy==0.24.4
-Twisted==14.0.2
-cffi==0.8.6
-cryptography==0.5.4
+MySQL-python==1.2.5
+SQLAlchemy==0.9.7
 cssselect==0.9.1
+ipython==2.3.0
 lxml==3.4.0
-pyOpenSSL==0.14
-pycparser==2.10
 pymongo==2.7.2
-queuelib==1.2.2
+pyquery==1.2.9
 requests==2.4.1
-six==1.8.0
-w3lib==1.10.0
 wsgiref==0.1.2
-zope.interface==4.1.1
+xmltodict==0.9.0
